# rcloneflix

./: .gitignore  index.html  package.json  vite.config.ts
.github/workflows/: build.yml
rcloneflix/: SETUP.md  package.json  tailwind.config.js
rcloneflix/src/: App.tsx  index.css
rcloneflix/src-tauri/src/: lib.rs  main.rs
rcloneflix/src-tauri/src/commands/: google.rs  player.rs  scan.rs  store.rs
rcloneflix/src/components/audioplayer/: AudioMiniPlayer.tsx
rcloneflix/src/lib/: scanner.ts  tauri.ts
rcloneflix/src/pages/: HomePage.tsx  LibraryPage.tsx  SettingsPage.tsx  SetupPage.tsx
rcloneflix/src/store/: appStore.ts
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: google.rs  mod.rs  player.rs  rclone.rs
src/components/: ToastContainer.tsx
src/components/adult/: AdultPinLock.tsx
src/components/audioplayer/: AudioMiniPlayer.tsx
src/components/common/: RemoteBrowser.tsx  ScanBar.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/setup/: ApiKeysStep.tsx  GoogleSignInStep.tsx  LibrariesStep.tsx  WelcomeStep.tsx
src/lib/: pin.ts  scanner.ts  sync.ts
src/pages/: LibraryPage.tsx  SettingsPage.tsx  SetupPage.tsx
src/pages/detail/: MediaDetailPage.tsx
src/pages/music/: MusicLibraryPage.tsx
src/pages/player/: EpubReaderPage.tsx  PdfReaderPage.tsx  VideoPlayerPage.tsx
src/pages/tv/: TvLibraryPage.tsx  TvShowPage.tsx
src/store/: appStore.ts  toastStore.ts
(+8 files in other folders)
