[package]
name = "rcloneflix"
version = "0.1.0"
description = "RcloneFlix - Stream media from rclone remotes"
authors = ["RcloneFlix"]
edition = "2021"

[lib]
name = "rcloneflix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rcloneflix"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
portpicker = "0.1"
vlc-rs = "0.3"
raw-window-handle = "0.6"
